styles/style.css
body {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: 'Montserrat', sans-serif;
    background-color: rgb(255, 231, 94);
}

img {
    width: 10%;
    margin-top: 2%;
    margin-bottom: 2%;
    border-radius: 8px;
}

header, footer {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    border: 1px solid rgb(161, 161, 161);
    background-color: #4c9e00;
    width: 80%;
    box-shadow: 5px 5px 5px #999;
}

div {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: start;
}

.instruction {
    margin-top: -6px;
    margin-bottom: 50px;
}

.copywrite {
    color: white;
    font-weight: bold;
    text-shadow: 2px 2px 8px #000000;
}

h1 {
    text-shadow: 2px 2px 8px #000000;
    color: white;
    margin-left: 40px;
}

h2 {
    text-shadow: 2px 2px 8px #000000;
}

.updated-time, #currentdate {
    color: yellow;
}


#currentdate {
    font-weight: bold;
    text-shadow: 2px 2px 8px #000000;
}

footer {
    display: flex;
    flex-direction: column;
}

